nimbus-cloud-client-014
-----------------------

[*] Added name of image to output of --status
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=6810

[*] Added warning when libgcj is detected
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=6871

[*] Fixed bug with handling of spaces in cluster names
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=6728

[*] Fixed misleading argument parsing
    http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=6873


nimbus-cloud-client-013
-----------------------

[*] Corrected sample cluster xml files

[*] Added --kernel option.  If you have coordinated with your administrator to
    use an alternate kernel, use this option to activate it.


nimbus-cloud-client-012
-----------------------

[*] Fixed bug in argument handling for --broker-url and --broker-id (bug6732)

[*] Added new meta-cloud-client that supports deploying a cluster across
    multiple clouds.

[*] Added properties for context broker URL and identity. These simplify
    launching workspaces at one site while using a context broker at
    another.


workspace-cloud-client-011
--------------------------

[*] A lone invocation of "--status" (which prints all your currently running
    instances) will now print the associated cloud handle of each workspace.

[*] Java 1.5 (Java 5) is now a requirement

[*] Support for "new style" contextualization (Nimbus TP2.2).  If you are
    using a previously created cluster image you will need to use an older
    cloud client to launch it unless you update the onboard ctx-agent.
    
    The TP2.2 service side is backwards compatible with the "old style"
    contextualization but the cloud client only supports the new one.

    ** You can only use this against Nimbus TP2.1 installations if you are
       not using contextualization **

[*] Support for contextualizing easily with EC2 resources.  See the output of
    "--extrahelp" for the new "--ec2script" option.  Sample EC2 cluster.xml