@@ -65,6 +65,10 @@ _NIMBUS_2_4_DEPRECATED
 	            <a href="http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7007">
                 Bug 7007 - destruction/schedule issues</a>
             </li>
+            <li>
+	            <a href="http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7009">
+                Bug 7009 - All scripts should use shebang /bin/bash </a>
+            </li>
         </ul>
     </li>
     <li>
@@ -77,6 +81,10 @@ _NIMBUS_2_4_DEPRECATED
 	        <li>
 	            <a href="http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7005">
                 Bug 7005 - multiple authorized kernels issue</a>
+            </li>
+            <li>
+	            <a href="http://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7009">
+                Bug 7009 - All scripts should use shebang /bin/bash </a>
             </li>
         </ul>
     </li>
